missing changes on mobile issues

--- a/src/components/Banners/FeaturedWorkTypeBanner/styles.module.scss
+++ b/src/components/Banners/FeaturedWorkTypeBanner/styles.module.scss
@@ -32,6 +32,8 @@
     overflow: hidden;
     flex-direction: column;
     grid-template-columns: auto;
+    margin-top: 0!important;
+    border-radius: 0!important;
   }
 
   .heroBackgroundContainer {
