--- a/src/routes/Products/components/BasicInfo/styles.module.scss
+++ b/src/routes/Products/components/BasicInfo/styles.module.scss
@@ -25,7 +25,7 @@
     }
 
     @include mobile {
-      flex-direction: column;
+      flex-direction: row;
     }
 
     button {
